I delted the unneccesary files

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- content starts here -->
       <h1>Hi! I'm Supreme Panta! And this is my website.</h1>
 
-      <p>Hi, I’m Chris!!!</p>
+      <p>Hi, I’m Supreme!!!</p>
 
       <p>I’m a 15 years old and i live in Arlington, Virginia. I love spending my time spend my time:</p>
          
