--- a/legendary.html
+++ b/legendary.html
@@ -11,18 +11,20 @@
 
     <nav>
        <a href="index.html">Home</a> *
-       <a href="legendary.html">Cats</a>
+       <a href="legendary.html">Dogs</a>
     </nav>
 
       <!-- content starts here -->
       <h1>I LOVE Dogs. Here's my page about dogs</h1>
 
-    <p>C Have:</p>
+    <p>Dogs Have:</p>
     <ul>
         <li>Teeth</li>
         <li>Eyes</li>
         <li>Paws</li>
     </ul>
+
+    <p>I will display: &#x1F436; </p>
 
     <a href="https://www.petsmart.com/"> Here's a good page about supplies for dogs</a>
 
