--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <p>Hi, I’m Supreme!!! </p>
 
-      <a href="https://www.google.com/imgres?q=handsome%20person%20ai&imgurl=https%3A%2F%2Fcdn.pixabay.com%2Fphoto%2F2023%2F07%2F14%2F19%2F36%2Fai-generated-8127609_1280.jpg&imgrefurl=https%3A%2F%2Fpixabay.com%2Fillustrations%2Fai-generated-man-handsome-portrait-8127609%2F&docid=Ae8Lz8cKAsXO7M&tbnid=6PpKdkRg4a8GQM&vet=12ahUKEwiK3MWPtMeGAxUTFFkFHVlIBPQQM3oFCIABEAA..i&w=1280&h=1280&hcb=2&ved=2ahUKEwiK3MWPtMeGAxUTFFkFHVlIBPQQM3oFCIABEAA"></a>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtTlYIgU9fjnm73ITsRse4yD_0nkrY3vmcvQ&s" alt="Supreme Raj Panta" >
       
          <p>I’m a 15 years old and i live in Arlington, Virginia. I love spending my time spend my time:</p>
          
